fixed css issue - horizontal scroll in the dorpdown - v1.3.11

--- a/src/css/multiselect.css
+++ b/src/css/multiselect.css
@@ -13,7 +13,6 @@ am-multiselect .dropdown-menu{
 am-multiselect .dropdown-menu > li > a {
     cursor:pointer;
     padding: 3px 10px;
-    white-space: normal;
 }
 
 am-multiselect .dropdown-menu > .selected {
